src/test/ui/unboxed-closures/unboxed-closures-failed-recursive-fn-2.stderr
error[E0282]: type annotations needed for `std::option::Option<T>`
  --> $DIR/unboxed-closures-failed-recursive-fn-2.rs:15:21
   |
LL |     let mut closure0 = None;
   |         ------------ consider giving `closure0` the explicit type `std::option::Option<T>`, where the type parameter `T` is specified
...
LL |                     Some(c) => {
   |                     ^^^^^^^ cannot infer type for type parameter `T` declared on the enum `Option`
   |
   = note: type must be known at this point

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
